@@ -40,14 +40,6 @@
     "type": "NRV"
   },
   {
-    "date": "2025-05-16",
-    "description": "Store bededag",
-    "locale": "da-DK",
-    "notes": "",
-    "region": "",
-    "type": "NRV"
-  },
-  {
     "date": "2025-05-29",
     "description": "Kristi himmelfartsdag",
     "locale": "da-DK",
